erDiagram
    USERS ||--o{ AUTH_SESSIONS : authenticates
    USERS ||--o{ ONE_TIME_TOKENS : verifies
    USERS ||--|| USER_SETTINGS : configures
    USERS ||--o{ USER_CATEGORIES : prefers
    USERS ||--o{ USER_FANDOMS : prefers
    CATEGORIES ||--o{ FANDOM_CATEGORIES : groups
    FANDOMS ||--o{ FANDOM_CATEGORIES : spans
    CATEGORIES ||--o{ RESOURCES : classifies
    USERS ||--o{ RESOURCES : authors
    RESOURCES ||--o| CHARACTER_PROFILES : specializes
    RESOURCES ||--o| MERCHANDISE_ITEMS : specializes
    RESOURCES ||--o| EVENT_DETAILS : specializes
    RESOURCES ||--o{ UPCOMING_RELEASES : schedules
    RESOURCES ||--o{ RESOURCE_GENRES : labels
    GENRES ||--o{ RESOURCE_GENRES : groups
    RESOURCES ||--o{ RESOURCE_TAGS : labels
    TAGS ||--o{ RESOURCE_TAGS : groups
    RESOURCES ||--o{ RESOURCE_MEDIA : contains
    MEDIA_ASSETS ||--o{ RESOURCE_MEDIA : reused
    USERS ||--o{ MEDIA_ASSETS : owns
    USERS ||--o{ BOOKMARKS : saves
    RESOURCES ||--o{ BOOKMARKS : saved
    USERS ||--o{ RATINGS : rates
    RESOURCES ||--o{ RATINGS : receives
    USERS ||--o{ ACTIVITIES : performs
    RESOURCES ||--o{ ACTIVITIES : viewed
    USERS ||--o{ FAN_SUBMISSIONS : submits
    FAN_SUBMISSIONS ||--o| RESOURCES : publishes
    FAN_SUBMISSIONS ||--o{ MODERATION_ACTIONS : reviewed
    USERS ||--o{ MODERATION_ACTIONS : reviews
    USERS o|--o{ FEEDBACK : sends
    USERS o|--o{ AUDIT_LOGS : acts
    USERS ||--o{ CHAT_THREADS : owns
    CHAT_THREADS ||--o{ CHAT_MESSAGES : contains
    CHAT_MESSAGES ||--o{ MESSAGE_SOURCES : cites
    RESOURCES ||--o{ MESSAGE_SOURCES : supports
